--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -39,7 +39,7 @@
                             <a asp-controller="Category" asp-action="Edit" class="btn btn-primary mx-2" asp-route-id="@obj.Id">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
-                            <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                            <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2" asp-route-id="@obj.Id">
                                 <i class="bi bi-trash-fill"></i> Delete
                             </a>
                         </div>
