--- a/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
+++ b/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
 @model BulkyWebRazor_Temp.Pages.Categories.IndexModel
-@{
-}
+
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
@@ -10,7 +9,7 @@
             </h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-page="categories/create" class="btn btn-primary">
+            <a asp-page="/categories/create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i>  Create New Category
             </a>
         </div>
@@ -38,7 +37,7 @@
                     </td>
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-page="category/edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <a asp-page="/categories/edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
                             <a asp-page="category/delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
