60. Create Category Post Handler

--- a/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
+++ b/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
@@ -40,7 +40,7 @@
                             <a asp-page="/categories/edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
-                            <a asp-page="category/delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <a asp-page="/categories/delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i> Delete
                             </a>
                         </div>
