--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -40,6 +40,10 @@
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
 
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                                </li>
+
                             </ul>
                         </li>
 
