95: Rich Text Editor (sử dụng extension login để có ô nhập liệu đa dạng cho description)

--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -67,6 +67,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.tiny.cloud/1/rc80k9t7fl8be1fh5wv9k2kevhq4qzgacc5qkqi3j0jv4rt9/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
