123. UI Bug (sửa layout của Manage để trang thông tin người dùng được hiển thị đầy đủ thông tin )

--- a/BulkyWeb/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -5,7 +5,8 @@
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+       // Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+        Layout = "/Views/Shared/_Layout.cshtml";
     }
 }
 
