171. Process Delayed Payment (thanh toán lại đơn hàng đã delay)

--- a/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -237,8 +237,8 @@
                                 </li>
                             </ul>
 
-                            @if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment &&
-                            Model.OrderHeader.OrderStatus == SD.StatusShipped)
+                            @if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusPending &&
+                            Model.OrderHeader.OrderStatus == SD.StatusPending)
                             {
                                 <button type="submit" class="btn btn-success form-control my-1">Pay Now</button>
                             }
