note. update namespace (sửa lại namespace cho phù hợp)

--- a/BulkyWeb/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@using BulkyBookWeb.Areas.Identity.Pages.Account
+@using BulkyWeb.Areas.Identity.Pages.Account
 @model ExternalLoginModel
 @{
     ViewData["Title"] = "Register";
